--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import "@picocss/pico/css/pico.min.css";
+
+.text-center {
+  text-align: center;
+}
